# AksharaOS

./: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements-docker.txt  requirements.txt
.github/workflows/: ci.yml
aksharaos.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
analysis/: audit_dataset.py  evaluate_retrieval.py  report_summary.py
api/: main.py
configs/: documents.yaml
data/curated/bangaru_nanelu/: quality_chunks.jsonl
data/curated/telugu_paryaya_nighantuvu/: quality_chunks.jsonl
data/curated/vector_store/1ecaf660-47b6-4c55-965d-121b411da53d/: index_metadata.pickle
data/interim/bangaru_nanelu/cleaned_pages/: page_002.txt  page_003.txt  page_004.txt  page_005.txt  page_006.txt  page_007.txt  page_008.txt  page_009.txt  page_010.txt  page_011.txt  page_012.txt  page_013.txt  page_014.txt  page_015.txt  page_016.txt  page_017.txt  (+479 more)
ingestion/: config.py  extract_pdf.py  ocr_extract.py  pipeline.py  runner.py
ingestion/processors/: chunk_processor.py  clean_processor.py  dictionary_chunk_processor.py  ocr_processor.py  quality_processor.py  synonym_chunk_processor.py
rag/: build_multi_vector_store.py  build_vector_store.py  context_builder.py  context_compressor.py  evaluator.py  generator.py  query_router.py  rag_pipeline.py  reranker.py  retriever.py  run_retrieval.py  search_vector_store.py  vector_store.py
reports/bangaru_nanelu/: quality_report.json  removed_chunks.jsonl
reports/telugu_paryaya_nighantuvu/: quality_report.json  removed_chunks.jsonl
tests/: test_api.py  test_config.py  test_quality.py
utils/: logger.py
(+2100 files in other folders)
